修改过滤文件，增加eclipse，ide过滤

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
+.project
+.ide
+
 # Compiled class file
 *.class
 
 # Log file
 *.log
-
-# BlueJ files
+  
+# BlueJ files  
 *.ctxt
 
 # Mobile Tools for Java (J2ME)
